objects/Business_Time__mdt.object
<CustomObject>
    <fields>
        <fullName>Hours_Per_Day__c</fullName>
        <defaultValue>8</defaultValue>
        <label>Hours Per Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minutes_Per_Hour__c</fullName>
        <defaultValue>60</defaultValue>
        <label>Minutes Per Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Days__c</fullName>
        <label>Number of Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Business Time</label>
    <pluralLabel>Business Time</pluralLabel>
</CustomObject>